// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element and submit button elements w/ 0 days to expire to UI Schema 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expiring.today",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [],
          "settings": {
            "complexity": {},
            "daysToExpiry": 0,
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element and submit button elements w/ 5 days to expire to UI Schema 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expiring.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [],
          "settings": {
            "complexity": {},
            "daysToExpiry": 5,
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element and submit button elements when daysToExpire is not present to UI Schema 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [],
          "settings": {
            "complexity": {},
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element, submit button and skip button elements to UI Schema for expired PW step with skip remediation in the transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [],
          "settings": {
            "complexity": {},
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "isActionStep": false,
          "label": "password.expiring.later",
          "step": "skip",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element, submit button, and additional subtitle elements to UI Schema for expired PW step with brandName provided 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "password.expiring.subtitle.specific",
        },
        "type": "Description",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [],
          "settings": {
            "complexity": {},
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Warning Authenticator Transformer Tests should add updated title element, submit button, and additional subtitle elements to UI Schema for expired PW step with messages in the transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expiring.soon",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "When your password is locked, you cannot access the account",
        },
        "type": "Description",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [],
          "settings": {
            "complexity": {},
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator-warning",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
